added api config

--- a/ml_model/final_pipeline.ipynb
+++ b/ml_model/final_pipeline.ipynb
@@ -700,9 +700,16 @@
     "    def transform(self, X, y=None, add_time_series=True):\n",
     "        print('Extracting data...')\n",
     "        X_ = X.copy()\n",
-    "        X_.rename(columns={'arrival_date_year':'arrival_year', 'arrival_date_month':'arrival_month', 'arrival_date_day_of_month':'arrival_day_of_month', 'arrival_date_week_number':'arrival_week_number'}, inplace=True)\n",
+    "\n",
+    "        X_['arrival_date'] = pd.to_datetime(X_['arrival_date'], format='%Y-%m-%d')\n",
+    "        X_['arrival_year'] = X_['arrival_date'].dt.year\n",
+    "        X_['arrival_month'] = X_['arrival_date'].dt.month\n",
+    "        X_['arrival_day_of_month'] = X_['arrival_date'].dt.day\n",
+    "        X_['arrival_day_of_week'] = X_['arrival_date'].dt.day_of_week\n",
+    "        X_['arrival_week_number'] = X_['arrival_date'].dt.isocalendar().week\n",
+    "        # X_.rename(columns={'arrival_date_year':'arrival_year', 'arrival_date_month':'arrival_month', 'arrival_date_day_of_month':'arrival_day_of_month', 'arrival_date_week_number':'arrival_week_number'}, inplace=True)\n",
     "        # X_['reservation_status_date'] = pd.to_datetime(X_['reservation_status_date'], format='%Y-%m-%d')\n",
-    "        X_['arrival_month'] = X_.apply(lambda x: self.__get_month_index(x['arrival_month']), axis=1)\n",
+    "        # X_['arrival_month'] = X_.apply(lambda x: self.__get_month_index(x['arrival_month']), axis=1)\n",
     "        \n",
     "        X_ = self.__null_handler(X_)\n",
     "\n",
@@ -710,18 +717,17 @@
     "        X_['agent'] = X_['agent'].apply(int)\n",
     "        X_['company'] = X_['company'].apply(int)\n",
     "        \n",
-    "        X_['arrival_date'] = X_.apply(lambda x: self.__get_date(x['arrival_year'], x['arrival_month'], x['arrival_day_of_month']), axis=1)\n",
-    "        X_['arrival_date'] = pd.to_datetime(X_['arrival_date'], format='%Y-%m-%d')\n",
-    "        X_['arrival_day_of_week'] = X_['arrival_date'].dt.day_of_week\n",
+    "        # X_['arrival_date'] = X_.apply(lambda x: self.__get_date(x['arrival_year'], x['arrival_month'], x['arrival_day_of_month']), axis=1)\n",
+    "        # X_['arrival_date'] = pd.to_datetime(X_['arrival_date'], format='%Y-%m-%d')\n",
+    "        # X_['arrival_day_of_week'] = X_['arrival_date'].dt.day_of_week\n",
     "\n",
-    "        X_['booking_date'] = X_.apply(lambda x: x['arrival_date'] - timedelta(days=x['lead_time']), axis=1)\n",
+    "        # X_['booking_date'] = X_.apply(lambda x: x['arrival_date'] - timedelta(days=x['lead_time']), axis=1)\n",
+    "        X_['booking_date'] = pd.to_datetime(X_['booking_date'], format='%Y-%m-%d')\n",
     "        X_['booking_year'] = X_['booking_date'].dt.year\n",
     "        X_['booking_month'] = X_['booking_date'].dt.month\n",
     "        X_['booking_day_of_month'] = X_['booking_date'].dt.day\n",
     "        X_['booking_day_of_week'] = X_['booking_date'].dt.day_of_week\n",
     "        X_['booking_week_number'] = X_['booking_date'].dt.isocalendar().week\n",
-    "\n",
-    "        X_['arrival_day_of_week'] = X_['arrival_date'].dt.dayofweek\n",
     "\n",
     "        X_['is_family'] = X_.apply(lambda x: self.__family(x['children'] + x['babies']), axis=1)\n",
     "\n",
@@ -751,12 +757,12 @@
     "        X.loc[X[X['distribution_channel'] == 'Undefined'].index, 'distribution_channel'] = 'TA/TO'\n",
     "        return X\n",
     "\n",
-    "    def __get_month_index(self,month):\n",
-    "        months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
-    "        return months.index(month)+1\n",
+    "    # def __get_month_index(self,month):\n",
+    "    #     months = ['January', 'February', 'March', 'April', 'May', 'June', 'July', 'August', 'September', 'October', 'November', 'December']\n",
+    "    #     return months.index(month)+1\n",
     "\n",
-    "    def __get_date(self,year,month,day):\n",
-    "        return str(year) + '-' + str(month) + '-' + str(day)\n",
+    "    # def __get_date(self,year,month,day):\n",
+    "    #     return str(year) + '-' + str(month) + '-' + str(day)\n",
     "\n",
     "    def __family(self,value):\n",
     "        if value > 0:\n",
@@ -1703,18 +1709,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
