--- a/ml_model/final_pipeline.ipynb
+++ b/ml_model/final_pipeline.ipynb
@@ -863,10 +863,15 @@
     "from pathlib import Path\n",
     "import os\n",
     "\n",
-    "def create_pkl(model, filename):\n",
+    "def get_pickle_path():\n",
     "    os.getcwd()\n",
     "    current_directory = Path(os.getcwd()).parent\n",
-    "    pkl_file = os.path.join(current_directory, 'pickle_files', filename + '.pkl')\n",
+    "    pkl_path = os.path.join(current_directory, 'pickle_files')\n",
+    "    return pkl_path\n",
+    "\n",
+    "def create_pkl(model, filename):\n",
+    "    pickle_path = get_pickle_path()\n",
+    "    pkl_file = os.path.join(pickle_path, filename + '.pkl')\n",
     "    pickle_out = open(pkl_file,'wb')\n",
     "    pickle.dump(model,pickle_out)\n",
     "    pickle_out.close()\n",
@@ -1706,18 +1711,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.9"
   },
   "orig_nbformat": 4,
   "vscode": {
