added docker compose

--- a/ml_model/final_pipeline.ipynb
+++ b/ml_model/final_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "[55486 rows x 32 columns]"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -680,9 +680,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature Extractor initiated...\n",
+      "Fitting data...\n",
+      "Extracting data...\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 55486 entries, 0 to 55485\n",
+      "Data columns (total 38 columns):\n",
+      " #   Column                          Non-Null Count  Dtype  \n",
+      "---  ------                          --------------  -----  \n",
+      " 0   stays_in_weekend_nights         55486 non-null  int64  \n",
+      " 1   stays_in_week_nights            55486 non-null  int64  \n",
+      " 2   adults                          55486 non-null  int64  \n",
+      " 3   children                        55486 non-null  int64  \n",
+      " 4   babies                          55486 non-null  int64  \n",
+      " 5   meal                            55486 non-null  object \n",
+      " 6   country                         55486 non-null  object \n",
+      " 7   market_segment                  55486 non-null  object \n",
+      " 8   distribution_channel            55486 non-null  object \n",
+      " 9   is_repeated_guest               55486 non-null  int64  \n",
+      " 10  previous_cancellations          55486 non-null  int64  \n",
+      " 11  previous_bookings_not_canceled  55486 non-null  int64  \n",
+      " 12  reserved_room_type              55486 non-null  object \n",
+      " 13  booking_changes                 55486 non-null  int64  \n",
+      " 14  deposit_type                    55486 non-null  object \n",
+      " 15  agent                           55486 non-null  int64  \n",
+      " 16  company                         55486 non-null  int64  \n",
+      " 17  days_in_waiting_list            55486 non-null  int64  \n",
+      " 18  customer_type                   55486 non-null  object \n",
+      " 19  required_car_parking_spaces     55486 non-null  int64  \n",
+      " 20  total_of_special_requests       55486 non-null  int64  \n",
+      " 21  is_family                       55486 non-null  int64  \n",
+      " 22  cos_arrival_month               55486 non-null  float64\n",
+      " 23  sin_arrival_month               55486 non-null  float64\n",
+      " 24  cos_arrival_week_number         55486 non-null  Float64\n",
+      " 25  sin_arrival_week_number         55486 non-null  Float64\n",
+      " 26  cos_arrival_day_of_month        55486 non-null  float64\n",
+      " 27  sin_arrival_day_of_month        55486 non-null  float64\n",
+      " 28  cos_arrival_day_of_week         55486 non-null  float64\n",
+      " 29  sin_arrival_day_of_week         55486 non-null  float64\n",
+      " 30  cos_booking_month               55486 non-null  float64\n",
+      " 31  sin_booking_month               55486 non-null  float64\n",
+      " 32  cos_booking_week_number         55486 non-null  Float64\n",
+      " 33  sin_booking_week_number         55486 non-null  Float64\n",
+      " 34  cos_booking_day_of_month        55486 non-null  float64\n",
+      " 35  sin_booking_day_of_month        55486 non-null  float64\n",
+      " 36  cos_booking_day_of_week         55486 non-null  float64\n",
+      " 37  sin_booking_day_of_week         55486 non-null  float64\n",
+      "dtypes: Float64(4), float64(12), int64(15), object(7)\n",
+      "memory usage: 16.3+ MB\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "import math\n",
@@ -706,7 +761,7 @@
     "        X_['arrival_year'] = X_['arrival_date'].dt.year\n",
     "        X_['arrival_month'] = X_['arrival_date'].dt.month\n",
     "        X_['arrival_day_of_month'] = X_['arrival_date'].dt.day\n",
-    "        X_['arrival_day_of_week'] = X_['arrival_date'].dt.day_of_week\n",
+    "        X_['arrival_day_of_week'] = X_['arrival_date'].dt.day_of_week + 1\n",
     "        X_['arrival_week_number'] = X_['arrival_date'].dt.isocalendar().week\n",
     "        # X_['reservation_status_date'] = pd.to_datetime(X_['reservation_status_date'], format='%Y-%m-%d')\n",
     "        \n",
@@ -721,7 +776,7 @@
     "        X_['booking_year'] = X_['booking_date'].dt.year\n",
     "        X_['booking_month'] = X_['booking_date'].dt.month\n",
     "        X_['booking_day_of_month'] = X_['booking_date'].dt.day\n",
-    "        X_['booking_day_of_week'] = X_['booking_date'].dt.day_of_week\n",
+    "        X_['booking_day_of_week'] = X_['booking_date'].dt.day_of_week + 1\n",
     "        X_['booking_week_number'] = X_['booking_date'].dt.isocalendar().week\n",
     "\n",
     "        X_['is_family'] = X_.apply(lambda x: self.__family(x['children'] + x['babies']), axis=1)\n",
@@ -770,14 +825,14 @@
     "        print(data.shape)\n",
     "        print(data.info())\n",
     "\n",
-    "# feature_extractor = FeatureExtractor()\n",
-    "# transformed_data = feature_extractor.fit_transform(train_data)\n",
-    "# transformed_data.info()"
+    "feature_extractor = FeatureExtractor()\n",
+    "transformed_data = feature_extractor.fit_transform(train_data)\n",
+    "transformed_data.info()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +855,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -815,6 +870,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.metrics import mean_squared_error,mean_absolute_percentage_error,confusion_matrix,f1_score,accuracy_score\n",
+    "\n",
     "def conf_matrix(y_test, pred_test):    \n",
     "    \n",
     "    # Creating a confusion matrix\n",
@@ -832,7 +889,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import mean_squared_error,mean_absolute_percentage_error,confusion_matrix,f1_score,accuracy_score\n",
     "\n",
     "def test_model_1(model):\n",
     "    model.fit(X_train_1,y_train_1)\n",
@@ -1040,8 +1096,8 @@
     }
    ],
    "source": [
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier,ExtraTreesClassifier,AdaBoostRegressor,GradientBoostingRegressor\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "model_1_rf = Pipeline([\n",
     "    ('full_transformer', full_transformer_1),\n",
@@ -1112,17 +1168,17 @@
    "source": [
     "# Pickle File Creation\n",
     "\n",
-    "model_pipeline = Pipeline([\n",
-    "    ('col_transformer', columnTransformer_1),\n",
-    "    ('pca', TruncatedSVD(n_components=50)),\n",
-    "    ('svc', SVC(class_weight='balanced'))\n",
-    "])\n",
-    "\n",
     "feature_ex = FeatureExtractor()\n",
     "feature_ex.fit(X_train_1,y_train_1)\n",
     "\n",
     "X_train_transformed_1 = feature_ex.transform(X_train_1)\n",
     "X_val_transformed_1 = feature_ex.transform(X_val_1)\n",
+    "\n",
+    "model_pipeline = Pipeline([\n",
+    "    ('col_transformer', columnTransformer_1),\n",
+    "    ('pca', TruncatedSVD(n_components=50)),\n",
+    "    ('svc', SVC(class_weight='balanced'))\n",
+    "])\n",
     "\n",
     "model_pipeline.fit(X_train_transformed_1,y_train_1)\n",
     "y_val_pred_1 = model_pipeline.predict(X_val_transformed_1)\n",
@@ -1711,6 +1767,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
